# contour-coherent-hausdorff

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
HausdorffDistanceOptimized/: CMakeLists.txt  main.cpp  vcpkg.json
HausdorffDistanceOptimized/include/ContourHausdorff/: ContourCoherentHausdorffDistance.hpp
HausdorffDistanceOptimized/scripts/: run_benchmarks.ps1  run_benchmarks.sh
HausdorffDistanceOptimized/src/baselines/: HausdorffDistanceBaselineLibs.cpp  HausdorffDistanceBaselineLibs.h  HausdorffDistanceBruteForce.hpp
HausdorffDistanceOptimized/src/benchmark/: BenchmarkCli.cpp  BenchmarkCli.h  Benchmarks.h
HausdorffDistanceOptimized/src/image/: ContourExtractor.cpp  ContourExtractor.h
TestImages/: README.md
docs/: article.html  index.html  style.css
docs/visualizations/: contour_coherent_search.html  hausdorff_bruteforce_no_stop.html  hausdorff_bruteforce_viz.html  hausdorff_shuffle_early_stop.html  hausdorff_vs_bruteforce.html  kdtree_contour_build_search.html
